src/test/ui/associated-types/associated-types-overridden-binding.stderr
error[E0284]: type annotations required: cannot resolve `<Self as std::iter::Iterator>::Item == i32`
  --> $DIR/associated-types-overridden-binding.rs:4:1
   |
LL | trait Foo: Iterator<Item = i32> {}
   | ------------------------------- required by `Foo`
LL | trait Bar: Foo<Item = u32> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0284`.
